--- a/spot_driver/config/spot_ros_example.yaml
+++ b/spot_driver/config/spot_ros_example.yaml
@@ -12,10 +12,10 @@
     deadzone: 0.05
     estop_timeout: 9.0
     username: "user"
-    password: "password"
-    hostname: "10.0.0.3"
-    start_estop: False
-    preferred_odom_frame: "odom" # pass either odom/vision. This frame will become the parent of body in tf2 tree and will be used in odometry topic. https://dev.bostondynamics.com/docs/concepts/geometry_and_frames.html?highlight=frame#frames-in-the-spot-robot-world for more info.
+    password: "y227et3htwef"
+    hostname: "192.168.80.3"
+    start_estop: True
+    preferred_odom_frame: "spot/odom" # pass either odom/vision. This frame will become the parent of body in tf2 tree and will be used in odometry topic. https://dev.bostondynamics.com/docs/concepts/geometry_and_frames.html?highlight=frame#frames-in-the-spot-robot-world for more info.
     async_tasks_rate: 10.0
     cmd_duration: 0.125 # Increase if spot stutters while walking
     rgb_cameras: True
